--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,7 @@ form {
 input[type="text"],
 input[type="search"],
 input[name="name"],
+input[name="password"],
 button {
   padding: 0.6rem 1rem;
   font-size: 1rem;
